# filetags

./: .gitignore  Cargo.toml  README.org  filetags.service  shell.nix
.direnv/: nix-profile-25.05-x9wnkly3k1gkq580  nix-profile-25.05-x9wnkly3k1gkq580.rc
examples/: config.yml
src/: args.rs  channels.rs  config.rs  dispatch.rs  lib.rs  logger.rs  main.rs  utils.rs  workers.rs
src/channels/: actions.rs  cleaning.rs  responder.rs  symlinker.rs  symlinking.rs  watcher.rs
src/channels/actions/: cleaning.rs  filesystem_asserts.rs  fs_asserts.rs  symlinking.rs
src/channels/actions/cleaning/: periodic_cleaner.rs
src/dispatch/: actions.rs  symlinks.rs  workers.rs
src/dispatch/actions/: cleaning.rs  filesystem.rs  symlinking.rs
src/dispatch/symlinks/: cleaning.rs  symlinking.rs
src/dispatch/workers/: periodic_cleaner.rs  responder.rs  watcher.rs
src/symlinks/: cleaning.rs  symlinking.rs
src/workers/: responder.rs  watcher.rs
tests/: common.rs  integration_tests.rs
