[package]
name = "filetags"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", default-features = false, features = [
  "derive",
  "std",
  "help",
  "usage",
] }
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
notify = "8.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_regex = "1.1.0"
serde_yml = "0.0.12"
shellexpand = "3.1.1"
smart-default = "0.7.1"
tempfile = "3.20.0"
walkdir = "2.5.0"
